--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
 	font-family: 'Vazir', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	background-color: #e5e5e5;
 }
 
 code {
