--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	background-color: #e5e5e5;
+	direction: rtl;
 }
 
 code {
